testsuite/tests/grammar/invalid_lkt/annotated_grammar_2.lkt
import common
import lexer_example

@with_lexer(foo_grammar) grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
